Agrego tiempos, justificacion, ventajas y desventajas a bag of word con stem

--- a/lab1/IntroPLN2018_lab_entrega1.ipynb
+++ b/lab1/IntroPLN2018_lab_entrega1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "        tokenizer=None, vocabulary=None)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1168,11 +1168,11 @@
        "        lowercase=True, max_df=0.5, max_features=None, min_df=100,\n",
        "        ngram_range=(1, 1), preprocessor=None, stop_words=None,\n",
        "        strip_accents=None, token_pattern='[a-záéíóúñ]{3,}',\n",
-       "        tokenizer=<function stem_tokenizer at 0x7f49613dc730>,\n",
+       "        tokenizer=<function stem_tokenizer at 0x7f9ceb556d90>,\n",
        "        vocabulary=None)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
       "Muy buena la atencion.\r\n",
       "100% recomendable.\n",
       "\n",
-      "Tiempo total:  66.09334400399894\n"
+      "Tiempo total:  65.68775585399999\n"
      ]
     }
    ],
@@ -1781,7 +1781,165 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Se toma como instancia base (`transf`) la obtenida en la sección *Bag of Word*, \n",
+    "a fin de realizar una comparación acorde con la sección anterior (Similitud).\n",
+    "\n",
+    "A la instancia original de *Bag of Word* se le aplica como nuevo parametro tokenizer, la funcion `stem_tokenizer`.\n",
+    "La misma calcula el *stem* para cada token obtenido de la instancia base, es decir, se convierte\n",
+    "el diccionario original a un nuevo diccionario con *stem*, \n",
+    "tal que para cada token se aplico el algoritmo *SpanishStemmer*.\n",
+    "\n",
+    "**Las observaciones realizadas son las siguientes:**\n",
+    "\n",
+    "- Entrenar la transformación requiere más tiempo de ejecución, esto se debe a que se agrega un nuevo paso de procesamiento como tokenizer, para cada palabra obtenida del diccionario original (1818 en total), se aplica el algoritmo de *Stemming de Porter*, el cual conlleva al menos 5 pasos y más de 60 reglas.\n",
+    "\n",
+    "- El diccionario con *stemming* se redujo en tamaño en aproximadamente un 24%, teniendo originalmente 1818 palabras, mientras que el diccionario con *stem* pasa a tener un total de 1388 palabras.\n",
+    "\n",
+    "- La ejecución `calcular_similitudes` e `imprimir_similares` redujo su tiempo de 73.8 a 68.6 segundos en promedio para una porción de 1000 comentarios, que representa tan sólo el 2% de la totalidad. Es razónable pensar que esta brecha entre ambos tiempos, comience a ser aún mayor a medida que se incremente la porción del corpus utilizado.\n",
+    "\n",
+    "- La impresión de los 50 comentarios más similares (y por tanto el calculo de similitud) dio distintos resultados.\n",
+    "\n",
+    "        \n",
+    "**A partir de las observaciones realizadas creemos conveniente comentar algunas ventajas y desventajas a la hora de utilizar este método:**\n",
+    "\n",
+    "*Stemming* es una fase de preprocesamiento comprendida a la hora de normalizar el texto, la cual consiste en reducir la palabra original, a su *stem*, mediante la aplicación de ciertas reglas ordenadas, las cuales van quitando afijos.\n",
+    "Muchas palabras son derivaciones del mismo *stem*, y se puede considerar que pertenecen al mismo concepto, es por esta razón que en algunas ocaciones es de interes agruparlas como un mismo concepto, como sucede en el problema actual de encontrar la similitud de comentarios.\n",
+    "\n",
+    "El objetivo del *Stemming* es reducir las formas derivadas de una palabra a una forma base común para todas ellas. Por ejemplo: aplicar *stem* a: `abarca`, `abarcar`, `abarcado` da como resultado `abarc`. Notar que el *stem* `abarc` y en general cualquier *stem* no tiene porque pertenecer a un diccionario en español (no confundir con lema).\n",
+    "\n",
+    "Es por esta razón que el tamaño del diccionario se redujo en tamaño en un 24%, ya que palabras similares, y en general con similar significado (es lo esperable), se agrupan en una forma base común. \n",
+    "Reducir el tamaño del mismo es de suma importancia, ya que a menor cantidad de features, menor sera el procesamiento realizado por los algoritmos posteriores al pre-procesamiento, se pudo observar este comportamiento a la hora de ejecutar `calcular_similitudes` e `imprimir_similares`, que al procesar vectores con menor tamaño los mismos redujeron su tiempo de ejecución. \n",
+    "\n",
+    "Por lo tanto incrementamos el tiempo de entrenamiento una única vez, a costa de reducir el tiempo en los algoritmos futuros. Y lo que es más, también se redujo el tamaño de las estructuras de datos, por lo que las capacidades de almacenamiento necesarias son menores a la hora de manejar el modelo de *bag of words* con *stemming* en memoria o en su persistencia en disco.\n",
+    "\n",
+    "Las desventajas de estos métodos es que para ciertas palabras, las reduce a un mismo concepto, cuando en realidad el concepto es distinto (falso positivo). Esto es lo que se conoce como `over-stemming` y a efectos de nuestro problema, esto afectaría en considerar comentarios como más similares de lo que realmente lo son. \n",
+    "\n",
+    "Otro error existente es el de `under-stemming`, el cual sucede cuando dos palabras con igual *stem* son reducidas a *stem* distintos (falso negativo). Nuevamente esto nos trae problemas dado que consideraríamos que ciertos comentarios no son similares cuando en realidad si lo son.\n",
+    "\n",
+    "En general el algóritmo de Porter da buenos resultados, es extensible a cualquier lenguaje y aumenta la *recall* sin afectar la *precision*. (A Comparative Study of Stemming Algorithms, Ms. Anjali Ganesh Jivani)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abarc\n",
+      "abarc\n",
+      "abarc\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(spanish_stemmer.stem(\"abarca\"))\n",
+    "print(spanish_stemmer.stem(\"abarcar\"))\n",
+    "print(spanish_stemmer.stem(\"abarcado\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Especificaciones técnicas:\n",
+    "\n",
+    "    $ lshw\n",
+    "    \n",
+    "    ===>\n",
+    "    \n",
+    "          *-core\n",
+    "               description: Motherboard\n",
+    "               product: TP500LAB\n",
+    "               vendor: ASUSTeK COMPUTER INC.\n",
+    "               physical id: 0\n",
+    "               version: 1.0\n",
+    "               serial: BSN12345678901234567\n",
+    "               slot: MIDDLE\n",
+    "             *-firmware\n",
+    "                  description: BIOS\n",
+    "                  vendor: American Megatrends Inc.\n",
+    "                  physical id: 0\n",
+    "                  version: TP500LAB.204\n",
+    "                  date: 12/11/2014\n",
+    "                  size: 64KiB\n",
+    "                  capacity: 6400KiB\n",
+    "                  capabilities: pci upgrade shadowing cdboot bootselect socketedrom edd int13floppy1200 int13floppy720 int13floppy2880 int5printscreen int9keyboard int14serial int17printer acpi usb smartbattery biosbootspecification uefi\n",
+    "             *-cache:0\n",
+    "                  description: L1 cache\n",
+    "                  physical id: e\n",
+    "                  slot: L1 Cache\n",
+    "                  size: 32KiB\n",
+    "                  capacity: 32KiB\n",
+    "                  capabilities: synchronous internal write-back data\n",
+    "                  configuration: level=1\n",
+    "             *-cache:1\n",
+    "                  description: L1 cache\n",
+    "                  physical id: f\n",
+    "                  slot: L1 Cache\n",
+    "                  size: 32KiB\n",
+    "                  capacity: 32KiB\n",
+    "                  capabilities: synchronous internal write-back instruction\n",
+    "                  configuration: level=1\n",
+    "             *-cache:2\n",
+    "                  description: L2 cache\n",
+    "                  physical id: 10\n",
+    "                  slot: L2 Cache\n",
+    "                  size: 256KiB\n",
+    "                  capacity: 256KiB\n",
+    "                  capabilities: synchronous internal write-back unified\n",
+    "                  configuration: level=2\n",
+    "             *-cache:3\n",
+    "                  description: L3 cache\n",
+    "                  physical id: 11\n",
+    "                  slot: L3 Cache\n",
+    "                  size: 4MiB\n",
+    "                  capacity: 4MiB\n",
+    "                  capabilities: synchronous internal write-back unified\n",
+    "                  configuration: level=3\n",
+    "             *-cpu\n",
+    "                  description: CPU\n",
+    "                  product: Intel(R) Core(TM) i7-5500U CPU @ 2.40GHz\n",
+    "                  vendor: Intel Corp.\n",
+    "                  physical id: 12\n",
+    "                  bus info: cpu@0\n",
+    "                  version: Intel(R) Core(TM) i7-5500U CPU @ 2.40GHz\n",
+    "                  serial: NULL\n",
+    "                  slot: SOCKET 0\n",
+    "                  size: 2877MHz\n",
+    "                  capacity: 3GHz\n",
+    "                  width: 64 bits\n",
+    "                  clock: 100MHz\n",
+    "                  capabilities: x86-64 fpu fpu_exception wp vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush dts acpi mmx fxsr sse sse2 ss ht tm pbe syscall nx pdpe1gb rdtscp constant_tsc arch_perfmon pebs bts rep_good nopl xtopology nonstop_tsc cpuid aperfmperf pni pclmulqdq dtes64 monitor ds_cpl vmx est tm2 ssse3 sdbg fma cx16 xtpr pdcm pcid sse4_1 sse4_2 x2apic movbe popcnt tsc_deadline_timer aes xsave avx f16c rdrand lahf_lm abm 3dnowprefetch cpuid_fault epb invpcid_single pti retpoline intel_pt spec_ctrl tpr_shadow vnmi flexpriority ept vpid fsgsbase tsc_adjust bmi1 avx2 smep bmi2 erms invpcid rdseed adx smap xsaveopt dtherm ida arat pln pts cpufreq\n",
+    "                  configuration: cores=2 enabledcores=2 threads=4\n",
+    "             *-memory\n",
+    "                  description: System Memory\n",
+    "                  physical id: 14\n",
+    "                  slot: System board or motherboard\n",
+    "                  size: 8GiB\n",
+    "                *-bank:0\n",
+    "                     description: SODIMM DDR3 Synchronous 1600 MHz (0,6 ns)\n",
+    "                     vendor: Samsung\n",
+    "                     physical id: 0\n",
+    "                     serial: 00000000\n",
+    "                     slot: ChannelA-DIMM0\n",
+    "                     size: 4GiB\n",
+    "                     width: 64 bits\n",
+    "                     clock: 1600MHz (0.6ns)\n",
+    "                *-bank:1\n",
+    "                     description: SODIMM DDR3 Synchronous 1600 MHz (0,6 ns)\n",
+    "                     product: HMT451S6BFR8A-PB\n",
+    "                     vendor: Hynix/Hyundai\n",
+    "                     physical id: 1\n",
+    "                     serial: 00707194\n",
+    "                     slot: ChannelB-DIMM0\n",
+    "                     size: 4GiB\n",
+    "                     width: 64 bits\n",
+    "                     clock: 1600MHz (0.6ns)\n"
+   ]
   }
  ],
  "metadata": {
