calculo nuevamente los tiempos por el cambio de implementacion de similitud

--- a/lab1/IntroPLN2018_lab_entrega1.ipynb
+++ b/lab1/IntroPLN2018_lab_entrega1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
        "        tokenizer=None, vocabulary=None)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
       "\n",
       "*************************************\n",
       "\n",
-      "Demoró 36.983 segundos.\n"
+      "Demoró 35.813 segundos.\n"
      ]
     }
    ],
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1228,11 +1228,11 @@
        "        lowercase=True, max_df=0.5, max_features=None, min_df=100,\n",
        "        ngram_range=(1, 1), preprocessor=None, stop_words=None,\n",
        "        strip_accents=None, token_pattern='[a-záéíóúñ]{3,}',\n",
-       "        tokenizer=<function stem_tokenizer at 0x7efbd390f268>,\n",
+       "        tokenizer=<function stem_tokenizer at 0x7f133504f8c8>,\n",
        "        vocabulary=None)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1767,7 +1767,7 @@
       "\n",
       "*************************************\n",
       "\n",
-      "Demoró 32.978 segundos.\n"
+      "Demoró 33.252 segundos.\n"
      ]
     }
    ],
@@ -1809,7 +1809,7 @@
     "\n",
     "- El diccionario con *stemming* se redujo en tamaño en aproximadamente un 24%, teniendo originalmente 1818 palabras, mientras que el diccionario con *stem* pasa a tener un total de 1388 palabras.\n",
     "\n",
-    "- La ejecución `calcular_similitudes` e `imprimir_similares` redujo su tiempo de 73.8 a 68.6 segundos en promedio para una porción de 1000 comentarios, que representa tan sólo el 2% de la totalidad. Es razónable pensar que esta brecha entre ambos tiempos, comience a ser aún mayor a medida que se incremente la porción del corpus utilizado.\n",
+    "- La ejecución `calcular_similitudes` e `imprimir_similares` redujo su tiempo de 36.0 a 33.6 segundos en promedio para una porción de 1000 comentarios, que representa tan sólo el 2% de la totalidad. Es razónable pensar que esta brecha entre ambos tiempos, comience a ser aún mayor a medida que se incremente la porción del corpus utilizado.\n",
     "\n",
     "- La impresión de los 50 comentarios más similares (y por tanto el calculo de similitud) dio distintos resultados.\n",
     "\n",
