Cambios en seccion Similitud

--- a/lab1/IntroPLN2018_lab_entrega1.ipynb
+++ b/lab1/IntroPLN2018_lab_entrega1.ipynb
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,8 @@
     "  normaVec2 = np.linalg.norm(vec2)\n",
     "  if (dist.__name__ in [\"cosine\", \"braycurtis\"]) and (normaVec1 == 0 or normaVec2 == 0):\n",
     "    return 0\n",
-    "  # Como las distancias de coseno y Bray-Curtis\n",
+    "  # Como las implementaciones de las distancias de coseno y Bray-Curtis no admiten vectores nulos, se debe chequear \n",
+    "  # este aspecto. En caso de que alguno de los dos cumpla esto, se los considera diferentes.\n",
     "  distancia = dist(vec1, vec2)\n",
     "  return 1/(1 + distancia) "
    ]
@@ -1114,12 +1115,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics.pairwise import cosine_distances as dist\n",
+    "from sklearn.metrics.pairwise import cosine_distances as dist_disp\n",
     "# Se puede utilizar algunas de las métricas incluidas en 'sklearn.matrix.pairwise' \n",
     "# las cuales son: cosine_distances, euclidean_distances y manhattan_distances.\n",
     "\n",
     "def calcular_similitud_disp(vec1, vec2):\n",
-    "  return 1/(1 + dist(vec1, vec2)[0][0]) "
+    "  return 1/(1 + dist_disp(vec1, vec2)[0][0]) "
    ]
   },
   {
@@ -1166,7 +1167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los resultados obtenidos son exáctamente los mismos que los obtenidos anteriormente. Se puede ver que al utilizar las funciones que contemplan  el manejo de matrices dispersas, la eficiencia computacional empeora considerablemente. Esto puede suceder ya que las funciones de distancia provistas por la librería Scikit Learn no son muy eficientes, incluso para el manejo de matrices dispersas. "
+    "Los resultados obtenidos son exactamente los mismos que los obtenidos en la implementación anterior. Se puede ver que al utilizar las funciones que contemplan  el manejo de matrices dispersas, la eficiencia computacional empeora considerablemente. Esto puede suceder ya que las funciones de distancia provistas por la librería Scikit Learn no son muy eficientes, incluso para el manejo de matrices dispersas. "
    ]
   },
   {
@@ -1180,9 +1181,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Utilizando el parámetro 'max_df' en 0.50, pudimos ver que los mejores resultados se obtuvieron con oraciones cortas. Esto se puede explicar observando que las palabras son muy comunes en el tipo de comentarios que se está analizando (excelente, muy, bueno, buena, comida, etc.). En el caso de oraciones largas, es muy probable que, aunque puedan contener estas palabras, el resto de las palabras no aparezcan comúnmente, por lo que aunque el valor de similitud sea alto los comentarios no son similares a la vista.\n",
+    "Utilizando el parámetro 'max_df' en 0.50, pudimos ver que los mejores resultados se obtuvieron con oraciones cortas. Esto se puede explicar observando que las palabras son muy comunes en el tipo de comentarios que se está analizando (excelente, muy, bueno, buena, comida, etc.). En el caso de oraciones largas es muy probable que, aunque puedan contener estas palabras, el resto de las palabras no aparezcan comúnmente, por lo que aunque el valor de similitud sea alto los comentarios no son similares a la vista.\n",
     "\n",
-    "Otro aspecto a considerar es que es probable que los comentarios contengan faltas de ortografía o errores de tipeo. Si utilizamos nociones de distancia entre vectores, estas palabras no se toman como iguales, lo que puede ser deseable para computar un valor de similitud entre palabaras o textos. En estos casos, es deseable utilizar una medida de distancia entre strings, como la distancia de Levenshtein o Jaro-Winkler."
+    "Otro aspecto a considerar es que es probable que los comentarios contengan faltas de ortografía o errores de tipeo. En nuestro, por lo indicado en la sección de Bag of Words, no se consideran estas palabras, lo que puede ser deseable (por ejemplo, puedo querer considerar la palabra 'comdia'). En estos casos, se podría utilizar una medida de distancia entre strings, como la distancia de Levenshtein o Jaro-Winkler, para mejorar los valores de similitud.\n",
+    "\n",
+    "También existen implementaciones de las librerías Scikit Learn y Scipy que ya calculan las distancias entre cada par de filas de una matriz. Se podrían utilizar estas implementaciones en lugar de la implementada en calcular_similitudes para mejorar la eficiencia computacional."
    ]
   },
   {
@@ -1971,7 +1974,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
