--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -341,7 +341,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "from nltk.stem.snowball import SpanishStemmer\n",
+    "from copy import copy\n",
+    "\n",
+    "spanish_stemmer = SpanishStemmer()\n",
+    "\n",
+    "# Se define una nueva función que servira como nuevo parametro tokenizer del constructor CountVectorizer\n",
+    "def stem_tokenizer(text):\n",
+    "    tokenizer = transf.build_tokenizer()\n",
+    "    return [spanish_stemmer.stem(word) for word in tokenizer(text)]\n",
+    "\n",
+    "tokenRegex = '[a-záéíóúñ]{3,}'\n",
+    "transf = sklearn.feature_extraction.text.CountVectorizer(max_df=0.5, min_df=300, ngram_range=(1,1), analyzer='word', \n",
+    "                                                         lowercase=True, token_pattern=tokenRegex, stop_words=None)\n",
+    "\n",
+    "trainCom = [comentario for (comentario, valor) in train]\n",
+    "validationCom = [comentario for (comentario, valor) in validation]\n",
+    "\n",
+    "transf_with_stem = copy(transf).set_params(tokenizer=stem_tokenizer)\n",
+    "transf_with_stem.fit(trainCom)\n",
+    "\n",
+    "vectores_with_stem = transf_with_stem.transform(trainCom)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diccionario_with_stem = transf_with_stem.get_feature_names()\n",
+    "#print(diccionario_with_stem)\n"
    ]
   },
   {
@@ -362,7 +392,11 @@
    "source": [
     "oracion_ej = 'Muy pero muy buena rica la comida y muy ricas tartas'\n",
     "\n",
-    "# COMPLETE A PARTIR DE AQUI\n"
+    "# COMPLETE A PARTIR DE AQUI\n",
+    "bow = transf_with_stem.transform([oracion_ej])\n",
+    "print(bow)\n",
+    "print(\"La bolsa de palabras tiene \" + str(len(diccionario_with_stem)) + \" palabras.\")\n",
+    "#print(vectores_with_stem)"
    ]
   },
   {
@@ -739,7 +773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
