Changed getVector function
Now it receives the vectors and the word it has to search for

--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -172,7 +172,7 @@
     "numToWord = dict(list(enumerate(words)))\n",
     "wordToNum = {v: k for k, v in numToWord.items()}\n",
     "\n",
-    "def getVector(word):\n",
+    "def getVector(vectors, word):\n",
     "    try:\n",
     "        vec = vectors[wordToNum[word]]\n",
     "    except KeyError:\n",
@@ -201,8 +201,8 @@
    "source": [
     "from scipy.spatial.distance import cosine\n",
     "\n",
-    "def similarity(word1, word2):\n",
-    "    return 1 - cosine(getVector(word1), getVector(word2))\n",
+    "def similarity(vector1, vector2):\n",
+    "    return 1 - cosine(vector1, vector2)\n",
     "\n",
     "pares = [\n",
     "    ('bueno','excelente'),\n",
@@ -222,7 +222,9 @@
     "print(\"Conjunto 'pares':\\n\")\n",
     "\n",
     "for pair in pares:\n",
-    "    print(\"La similitud entre '{}' y '{}' es {}.\".format(pair[0], pair[1], similarity(pair[0], pair[1])))\n",
+    "    vector0 = getVector(vectors, pair[0])\n",
+    "    vector1 = getVector(vectors, pair[1])\n",
+    "    print(\"La similitud entre '{}' y '{}' es {}.\".format(pair[0], pair[1], similarity(vector0, vector1)))\n",
     "\n",
     "print(\"\\nConjunto 'pares_estudiante':\\n\")\n",
     "\n",
@@ -232,7 +234,9 @@
     "] \n",
     "\n",
     "for pair in pares_estudiante:\n",
-    "    print(\"La similitud entre '{}' y '{}' es {}.\".format(pair[0], pair[1], similarity(pair[0], pair[1])))"
+    "    vector0 = getVector(vectors, pair[0])\n",
+    "    vector1 = getVector(vectors, pair[1])\n",
+    "    print(\"La similitud entre '{}' y '{}' es {}.\".format(pair[0], pair[1], similarity(vector0, vector1)))"
    ]
   },
   {
