Added search for words that have a vector or don't

--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -298,7 +298,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "hasVector = set()\n",
+    "hasVectorNot = set()\n",
+    "\n",
+    "for word in vocabulario:\n",
+    "    try:\n",
+    "        vec = vectors[wordToNum[word]]\n",
+    "    except KeyError:\n",
+    "        hasVectorNot.add(word)\n",
+    "    hasVector.add(word)\n",
+    "\n",
+    "for word in enumerate(list(hasVectorNot)):\n",
+    "    print(word[1])\n",
+    "    if (word[0] == 20): break;\n",
+    "    \n"
    ]
   },
   {
