--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -432,8 +432,8 @@
    "outputs": [],
    "source": [
     "def data2Xy_bow(bow, data):\n",
-    "    X = ...\n",
-    "    y = ...\n",
+    "    X = transf_with_stem.transform([comentario for (comentario, etiqueta) in data])\n",
+    "    y = [etiqueta for (comentario,etiqueta) in data]\n",
     "    return X,y\n"
    ]
   },
