Added check for null vectors

--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -200,8 +200,11 @@
    "outputs": [],
    "source": [
     "from scipy.spatial.distance import cosine\n",
+    "from numpy.linalg import norm\n",
     "\n",
     "def similarity(vector1, vector2):\n",
+    "    if ((norm(vector1) == 0) or (norm(vector1) == 0)):\n",
+    "        return 0\n",
     "    return 1 - cosine(vector1, vector2)\n",
     "\n",
     "pares = [\n",
@@ -231,6 +234,7 @@
     "pares_estudiante = [\n",
     "    ('bodka', 'vodka'),\n",
     "    ('manuela', 'marea'),\n",
+    "    ('aaaaaaaaaaa', 'bbbbbbbbbbbbbbbbb')\n",
     "] \n",
     "\n",
     "for pair in pares_estudiante:\n",
