SVM y NN para bag of words

--- a/lab2/IntroPLN2018_lab_entrega2.ipynb
+++ b/lab2/IntroPLN2018_lab_entrega2.ipynb
@@ -203,7 +203,7 @@
     "from numpy.linalg import norm\n",
     "\n",
     "def similarity(vector1, vector2):\n",
-    "    if ((norm(vector1) == 0) or (norm(vector1) == 0)):\n",
+    "    if ((norm(vector1) == 0) or (norm(vector2) == 0)):\n",
     "        return 0\n",
     "    return 1 - cosine(vector1, vector2)\n",
     "\n",
@@ -367,32 +367,23 @@
     "\n",
     "spanish_stemmer = SpanishStemmer()\n",
     "\n",
+    "tokenRegex = '[a-záéíóúñ]{3,}'\n",
+    "transf = sklearn.feature_extraction.text.CountVectorizer(max_df=0.2, min_df=400, ngram_range=(1,1), analyzer='word', \n",
+    "                                                         lowercase=True, token_pattern=tokenRegex, stop_words=None)\n",
+    "\n",
     "# Se define una nueva función que servira como nuevo parametro tokenizer del constructor CountVectorizer\n",
     "def stem_tokenizer(text):\n",
     "    tokenizer = transf.build_tokenizer()\n",
     "    return [spanish_stemmer.stem(word) for word in tokenizer(text)]\n",
     "\n",
-    "tokenRegex = '[a-záéíóúñ]{3,}'\n",
-    "transf = sklearn.feature_extraction.text.CountVectorizer(max_df=0.5, min_df=300, ngram_range=(1,1), analyzer='word', \n",
-    "                                                         lowercase=True, token_pattern=tokenRegex, stop_words=None)\n",
-    "\n",
     "trainCom = [comentario for (comentario, valor) in train]\n",
     "validationCom = [comentario for (comentario, valor) in validation]\n",
+    "comments = trainCom + validationCom\n",
     "\n",
     "transf_with_stem = copy(transf).set_params(tokenizer=stem_tokenizer)\n",
-    "transf_with_stem.fit(trainCom)\n",
+    "transf_with_stem.fit(comments)\n",
     "\n",
-    "vectores_with_stem = transf_with_stem.transform(trainCom)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diccionario_with_stem = transf_with_stem.get_feature_names()\n",
-    "#print(diccionario_with_stem)\n"
+    "vectores_with_stem = transf_with_stem.transform(comments)"
    ]
   },
   {
@@ -416,6 +407,7 @@
     "# COMPLETE A PARTIR DE AQUI\n",
     "bow = transf_with_stem.transform([oracion_ej])\n",
     "print(bow)\n",
+    "diccionario_with_stem = transf_with_stem.get_feature_names()\n",
     "print(\"La bolsa de palabras tiene \" + str(len(diccionario_with_stem)) + \" palabras.\")\n",
     "#print(vectores_with_stem)"
    ]
@@ -453,7 +445,7 @@
    "outputs": [],
    "source": [
     "def data2Xy_bow(bow, data):\n",
-    "    X = transf_with_stem.transform([comentario for (comentario, etiqueta) in data])\n",
+    "    X = bow.transform([comentario for (comentario, etiqueta) in data])\n",
     "    y = [etiqueta for (comentario,etiqueta) in data]\n",
     "    return X,y\n"
    ]
@@ -479,11 +471,16 @@
     "]\n",
     "\n",
     "lista_comentarios_estudiante = [\n",
-    "    # ...\n",
+    "    ('Es todo muy muy rico y de alta calidad!', 'muy muy rico todo. servicios excellente. buen curry.'),\n",
+    "    ('Guijón: Por favor no cambien nunca. Gracias', 'caro y malo no volveria nunca mas'),\n",
+    "    ('Horrible. Muy mala comida y carísimo.', 'carisimo, la comida horrible!!!!!!!!!!!!'),\n",
+    "    ('En los rubros ambiente, atención y comida, lo mejor de Palermo.', 'mala atencion y falta de buena comida y ambiente, cambien de rubro.')\n",
     "]\n",
     "\n",
     "# COMPLETE A PARTIR DE AQUI\n",
-    "\n"
+    "for par in lista_comentarios + lista_comentarios_estudiante:\n",
+    "    vs = transf_with_stem.transform(par)\n",
+    "    print(\"La similitud entre '{}' y '{}' es {}.\".format(par[0], par[1], similarity(vs.toarray()[0], vs.toarray()[1])))\n"
    ]
   },
   {
@@ -595,7 +592,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X,y = data2Xy_bow(transf_with_stem, train)\n",
+    "clf = sklearn.svm.SVC(kernel='linear',shrinking=False)\n",
+    "clf.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xval, yval = data2Xy_bow(transf_with_stem, validation)\n",
+    "clf.score(Xval, yval)"
+   ]
   },
   {
    "cell_type": "code",
@@ -639,7 +650,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "clfNN = MLPClassifier(solver='adam', alpha=1e-5, batch_size=500, max_iter=500, learning_rate='adaptive', hidden_layer_sizes=(5, 2), shuffle=False, activation='identity', tol=1e-4)\n",
+    "clfNN.fit(X,y)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -660,7 +675,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "clfNN.score(Xval, yval)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -720,7 +737,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Xtest, ytest = data2Xy_bow(transf_with_stem, test)\n",
+    "print(\"SVM bow tiene accuracy {} para el conjunto de test\".format(clf.score(Xtest, ytest)))\n",
+    "print(\"FF NN bow tiene accuracy {} para el conjunto de test\".format(clfNN.score(Xtest, ytest)))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -736,7 +757,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "predicted = clfNN.predict(Xtest)\n",
+    "conf = sklearn.metrics.confusion_matrix(ytest, predicted)\n",
+    "tp, tn, fp, fn = conf[1][1], conf[0][0], conf[0][1], conf[1][0]\n",
+    "print(\"Seleccionando el modelo de Feed Forward Neural Network con Bag of Words se obtiene lo siguiente:\")\n",
+    "print(\"Hay {} verdaderos positivos, {} verdaderos negativos, {} falsos positivos, {} falsos negativos\".format(tp, tn, fp, fn))\n",
+    "precision = tp / (tp + fp)\n",
+    "recall = tp / (tp + fn)\n",
+    "f1Score = 2 * precision * recall / (precision + recall)\n",
+    "print(\"Precision: {}, recall: {}, Fscore: {}\".format(precision, recall, f1Score))"
+   ]
   },
   {
    "cell_type": "markdown",
